--- a/index.html
+++ b/index.html
@@ -78,11 +78,12 @@
 
     <footer class="footer">
       <div class="footer__addr">
-        <a href="https://pss.com.na"><h1 class="footer__logo">
-          <img
-            width="20%"
-            src="/img/Privatschule-Swakopmund-Logo.webp"
-            alt="PSS Logo"
+        <h1 class="footer__logo">
+          <a href="https://pss.com.na">
+            <img
+              width="20%"
+              src="/img/Privatschule-Swakopmund-Logo.webp"
+              alt="PSS Logo"
           /></a>
         </h1>
 
@@ -112,7 +113,7 @@
             <li>
               <a href="#"
                 ><span class="stars">Vice Chairpersons:</span> <br />Amit:
-                amit@pss-src.org<br/>Kyra: kyra@pss-src.org</a
+                amit@pss-src.org<br />Kyra: kyra@pss-src.org</a
               >
             </li>
           </ul>
@@ -123,18 +124,21 @@
 
           <ul class="nav__ul nav__ul--extra">
             <li>
-              <a href="#"><span class="red">Secretary:</span><br>secretary@pss.com.na</a>
+              <a href="#"
+                ><span class="red">Secretary:</span
+                ><br />secretary@pss.com.na</a
+              >
             </li>
 
             <li>
-              <a href="#"><span class="red">HS Phase Head:</span><br>Ilse Liechti: ilse.liecthi@pss.com.na</a>
+              <a href="#"
+                ><span class="red">HS Phase Head:</span><br />Ilse Liechti:
+                ilse.liecthi@pss.com.na</a
+              >
             </li>
-
-            
           </ul>
         </li>
-
+      </ul>
     </footer>
-    
   </body>
 </html>
