--- a/Pages/Clubs/Clubs.html
+++ b/Pages/Clubs/Clubs.html
@@ -57,13 +57,14 @@
       </div>
     </div>
 
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="footer__addr">
-        <a href="https://pss.com.na"></a><h1 class="footer__logo">
-          <img
-            width="20%"
-            src="/img/Privatschule-Swakopmund-Logo.webp"
-            alt="PSS Logo"
+        <h1 class="footer__logo">
+          <a href="https://pss.com.na">
+            <img
+              width="20%"
+              src="/img/Privatschule-Swakopmund-Logo.webp"
+              alt="PSS Logo"
           /></a>
         </h1>
 
@@ -93,7 +94,7 @@
             <li>
               <a href="#"
                 ><span class="stars">Vice Chairpersons:</span> <br />Amit:
-                amit@pss-src.org<br/>Kyra: kyra@pss-src.org</a
+                amit@pss-src.org<br />Kyra: kyra@pss-src.org</a
               >
             </li>
           </ul>
@@ -104,45 +105,21 @@
 
           <ul class="nav__ul nav__ul--extra">
             <li>
-              <a href="#"><span class="red">Secratary:</span><br>secratary@pss-src.org</a>
+              <a href="#"
+                ><span class="red">Secretary:</span
+                ><br />secretary@pss.com.na</a
+              >
             </li>
 
             <li>
-              <a href="#"><span class="red">HS Phase Head:</span><br>Ilse Liechti: ilse@pss.co.na</a>
-            </li>
-
-            
-          </ul>
-        </li>
-
-        <li class="nav__item">
-          <h2 class="nav__title">Legal</h2>
-
-          <ul class="nav__ul">
-            <li>
-              <a href="#">Privacy Policy</a>
-            </li>
-
-            <li>
-              <a href="#">Terms of Use</a>
-            </li>
-
-            <li>
-              <a href="#">Sitemap</a>
+              <a href="#"
+                ><span class="red">HS Phase Head:</span><br />Ilse Liechti:
+                ilse.liecthi@pss.com.na</a
+              >
             </li>
           </ul>
         </li>
-      </ul> -->
-
-      <div class="legal">
-        <p>&copy; AEROS WEB DESIGN 2023</p>
-
-        <div class="legal__links">
-          <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-            <span>Click Me, or perish.</span></a
-          >
-        </div>
-      </div>
+      </ul>
     </footer>
   </body>
 </html>
