--- a/Pages/Suggestions/Form.html
+++ b/Pages/Suggestions/Form.html
@@ -49,11 +49,12 @@
 
     <footer class="footer">
       <div class="footer__addr">
-        <a href="https://pss.com.na"></a><h1 class="footer__logo">
-          <img
-            width="20%"
-            src="/img/Privatschule-Swakopmund-Logo.webp"
-            alt="PSS Logo"
+        <h1 class="footer__logo">
+          <a href="https://pss.com.na">
+            <img
+              width="20%"
+              src="/img/Privatschule-Swakopmund-Logo.webp"
+              alt="PSS Logo"
           /></a>
         </h1>
 
@@ -62,9 +63,9 @@
         <address>
           Künhast Street, Swakopmund, Namibia<br />
 
-          <!-- <a class="footer__btn" href="/Pages/Suggestions/Form.html"
+          <a class="footer__btn" href="/Pages/Suggestions/Form.html"
             >Make a Suggestion</a
-          > -->
+          >
         </address>
       </div>
 
@@ -83,7 +84,7 @@
             <li>
               <a href="#"
                 ><span class="stars">Vice Chairpersons:</span> <br />Amit:
-                amit@pss-src.org<br/>Kyra: kyra@pss-src.org</a
+                amit@pss-src.org<br />Kyra: kyra@pss-src.org</a
               >
             </li>
           </ul>
@@ -94,45 +95,21 @@
 
           <ul class="nav__ul nav__ul--extra">
             <li>
-              <a href="#"><span class="red">Secratary:</span><br>secratary@pss-src.org</a>
+              <a href="#"
+                ><span class="red">Secretary:</span
+                ><br />secretary@pss.com.na</a
+              >
             </li>
 
             <li>
-              <a href="#"><span class="red">HS Phase Head:</span><br>Ilse Liechti: ilse@pss.co.na</a>
-            </li>
-
-            
-          </ul>
-        </li>
-
-        <li class="nav__item">
-          <h2 class="nav__title">Legal</h2>
-
-          <ul class="nav__ul">
-            <li>
-              <a href="#">Privacy Policy</a>
-            </li>
-
-            <li>
-              <a href="#">Terms of Use</a>
-            </li>
-
-            <li>
-              <a href="#">Sitemap</a>
+              <a href="#"
+                ><span class="red">HS Phase Head:</span><br />Ilse Liechti:
+                ilse.liecthi@pss.com.na</a
+              >
             </li>
           </ul>
         </li>
       </ul>
-
-      <!-- <div class="legal">
-        <p>&copy; AEROS WEB DESIGN 2023</p>
-
-        <div class="legal__links">
-          <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-            <span>Click Me, or perish.</span></a
-          >
-        </div>
-      </div> -->
     </footer>
   </body>
 </html>
