Spelling mistakes, Arne.

--- a/Pages/SRC/SRC.html
+++ b/Pages/SRC/SRC.html
@@ -59,7 +59,7 @@
             src="/img/Amit van Wyk Cai.JPG"
             alt="Amit von Wyk Cai, Vice Chairperson of the 2022/2023 PSS SRC"
           />
-          <p class="title">Amit von Wyk Cai</p>
+          <p class="title">Amit Van Wyk Cai</p>
           <p class="title2">Vice Chairperson</p>
         </div>
         <div class="media-element">
@@ -83,7 +83,7 @@
             src="/img/Malvin Mashamba.JPG"
             alt="Malvin Mashimba, Treasurer of the 2022/2023 PSS SRC"
           />
-          <p class="title">Malvin Mashimba</p>
+          <p class="title">Malvin Mashamba</p>
           <p class="title2">Treasurer</p>
         </div>
         <div class="media-element">
