Fixed alot of bugs

--- a/Pages/SRC/SRC.html
+++ b/Pages/SRC/SRC.html
@@ -65,7 +65,7 @@
         <div class="media-element">
           <img
             src="/img/Keira Roets.JPG"
-            alt="Keira Roets, Vice Chairperson of the 2022/2023 PSS SRC"
+            alt="Kyra Roets, Vice Chairperson of the 2022/2023 PSS SRC"
           />
           <p class="title">Keira Roets</p>
           <p class="title2">Vice Chairperson</p>
