--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
     <meta
       name="keyword"
-      content="PSS, SRC, PSS SRC, pss, src, pss src, Private School Swakopmund, Student Representative Council, Private School Swakopmund SRC, Private School Swakopmund Student Representative Council"
+      content="PSS, SRC, PSS SRC, pss, src, pss src, Private School Swakopmund, Student Representative Council, Private School Swakopmund SRC, Private School Swakopmund Student Representative Council, private school, private school swakopmund"
     />
 
     <title>The PSS SRC's Website: Your hub for Information and Resources</title>
@@ -72,6 +72,9 @@
         <p class="anco">
           <span class="red">ANCO DE KONING:</span>
           <span class="italic">Chairperson of the SRC</span>
+        </p>
+        <p class="quote">
+         <span class="italic">A successful person finds the right place for <span class="red">himself.</span> A successful leader finds rhe right place for <span class="red">others.</span><br><br> - John C. Maxwell
         </p>
       </div>
     </div>
