--- a/Pages/Suggestions/Form.html
+++ b/Pages/Suggestions/Form.html
@@ -1,115 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles.css" />
-    >
-    <link rel="shortcut icon" href="img/SRC logo.png" type="image/x-icon" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Oswald&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
-      rel="stylesheet"
-    />
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <title>Suggestions</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <title>SRC Suggestion and Complaints Form</title>
+    <script async src="https://tally.so/widgets/embed.js"></script>
+    <style type="text/css">
+      html { margin: 0; height: 100%; overflow: hidden; }
+      iframe { position: absolute; top: 0; right: 0; bottom: 0; left: 0; border: 0; }
+    </style>
   </head>
   <body>
-    <input type="checkbox" id="active" />
-    <label for="active" class="menu-btn">👆</label>
-    <div class="wrapper">
-      <ul>
-        <li>
-          <a href="/index.html"
-            ><img height="150px" src="/img/SRC logo.png" alt="The SRC Logo"
-          /></a>
-        </li>
-        <li><a href="/Pages/SRC/SRC.html">2022/2023 SRC</a></li>
-        <li><a href="/Pages/Suggestions/Form.html">Suggestions</a></li>
-        <li><a href="/Pages/Orientation/gr8.html">Orientation</a></li>
-        <li><a href="/Pages/Clubs/Clubs.html">Clubs</a></li>
-      </ul>
-    </div>
-    <div class="form">
-      <h4 class="centre">Make a suggestion!</h4>
-      <iframe
-        src="https://docs.google.com/forms/d/e/1FAIpQLSdv8IzI_X6zrjzXZs3rsj11e19aeXPi8VzGbucRSmwJSFcnVQ/viewform?embedded=true"
-        width="100%"
-        height="100%"
-        frameborder="0"
-        marginheight="0"
-        marginwidth="0"
-        >Loading…</iframe
-      >
-    </div>
-
-    <footer class="footer">
-      <div class="footer__addr">
-        <h1 class="footer__logo">
-          <a href="https://pss.com.na">
-            <img
-              width="20%"
-              src="/img/Privatschule-Swakopmund-Logo.webp"
-              alt="PSS Logo"
-          /></a>
-        </h1>
-
-        <h2>Address:</h2>
-
-        <address>
-          Künhast Street, Swakopmund, Namibia<br />
-
-          <a class="footer__btn" href="/Pages/Suggestions/Form.html"
-            >Make a Suggestion</a
-          >
-        </address>
-      </div>
-
-      <ul class="footer__nav">
-        <li class="nav__item">
-          <h2 class="nav__title">Contact the SRC:</h2>
-
-          <ul class="nav__ul">
-            <li>
-              <a href="#"
-                ><span class="stars">Chairperson:</span> <br />Anco:
-                anco@pss-src.org</a
-              >
-            </li>
-
-            <li>
-              <a href="#"
-                ><span class="stars">Vice Chairpersons:</span> <br />Amit:
-                amit@pss-src.org<br />Kyra: kyra@pss-src.org</a
-              >
-            </li>
-          </ul>
-        </li>
-
-        <li class="nav__item nav__item--extra">
-          <h2 class="nav__title">Contact PSS:</h2>
-
-          <ul class="nav__ul nav__ul--extra">
-            <li>
-              <a href="#"
-                ><span class="red">Secretary:</span
-                ><br />secretary@pss.com.na</a
-              >
-            </li>
-
-            <li>
-              <a href="#"
-                ><span class="red">HS Phase Head:</span><br />Ilse Liechti:
-                ilse.liecthi@pss.com.na</a
-              >
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </footer>
+    <iframe data-tally-src="https://tally.so/r/waejvv" width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0" title="SRC Suggestion and Complaints Form"></iframe>
   </body>
 </html>
