Change changes so you have to change w/ it

--- a/Pages/SRC/SRC.html
+++ b/Pages/SRC/SRC.html
@@ -67,7 +67,7 @@
             src="/img/Keira Roets.JPG"
             alt="Kyra Roets, Vice Chairperson of the 2022/2023 PSS SRC"
           />
-          <p class="title">Keira Roets</p>
+          <p class="title">Kyra Roets</p>
           <p class="title2">Vice Chairperson</p>
         </div>
         <div class="media-element">
